@@ -1,8 +1,14 @@
+2016-02-02 Yann LEYDIER <yann@leydier.info>
+	* GUI (tree_selection_changed): Now displays lines, words and characters at
+			page and view levels.
+	* GUI (load_project): Fixed a crash when the project folder is not a valid
+			Oriflamms project.
+
 2016-02-01 Yann LEYDIER <yann@leydier.info>
 	* View (ComputeFrontier): Now returns a straight line if no path is found.
 	* GraphicalLine (ExtractFeatures): Bugfix.
 	* View (AlignRange, AlignWordCharacters): Silently ignore text lines that
-		are not associated to a GraphicalLine.
+			are not associated to a GraphicalLine.
 
 2016-01-26 Yann LEYDIER <yann@leydier.info>
 	* orisig: Updated.
